attempt at fixing covers

--- a/Catalogue/style.css
+++ b/Catalogue/style.css
@@ -6,12 +6,21 @@ body {
 
 .prattler {
     position: absolute;
-
+    width: 1z0%;
 }
 
-img {
-        width: 60%;
+.shadowbox {
+    background-color: black;
+    opacity: 0.5;
+    z-index: 99;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: none;
+    
 }
+
 .nav {
     top:200px;
     font-family:'neuzeit-grotesk', 'Lato', sans-serif;
@@ -26,6 +35,7 @@ img {
 	border-radius: 5px;
 	background-color: #0099B5;
 	z-index: 100;
+	box-shadow: 3px 3px 3px rgba(5, 5, 5, 0.4);
 }
 .button {
     position: relative;
@@ -44,6 +54,49 @@ img {
      top: -12px;
  }
 
+.tab {
+    font-family:'neuzeit-grotesk', 'Lato', sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    text-align: center;
+    letter-spacing: 1px;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 0;
+    margin-bottom: 30px; 
+    flex-grow: 1;
+    padding: 5px;
+    padding-top: 45px;
+    background-color: white;
+}
+
+.title {
+     font-family:'neuzeit-grotesk', 'Lato', sans-serif;
+    font-weight: 700;
+    font-size: 32px;
+    text-align: center;
+    letter-spacing: 1px;
+    margin: 15px;
+    margin-top: 15px;
+    flex-grow: 1;
+    padding-left: 2px; 
+    padding-right: 2px;
+    padding-top: 10px;
+    border-style: solid;
+    border-width: 6px
+}
+
 .box {
     background-color: yellow;
 }
+
+.header {
+    background-color: white;
+    height: 100px;
+    width: 100%;
+    margin: 0;
+    box-shadow: 3px 3px 3px rgba(5, 5, 5, 0.4);
+    z-index: 200;
+    display: flex;
+}
+
